# my-socket-io-client

./: Cargo.toml  README.md
src/: client.rs  client_inner.rs  event_subscribers.rs  lib.rs  sid.rs  socket_io_callbacks.rs  socket_io_event_subscriber.rs  socket_io_namespace_callbacks.rs  socket_io_rpc_models.rs  socket_io_settings.rs
src/socket_io_connection/: ack_awaiters.rs  mod.rs  socket_io_connection.rs  socket_io_connection_inner.rs
